--- a/_sass/index/_variables.scss
+++ b/_sass/index/_variables.scss
@@ -3,3 +3,6 @@ $green: #aab971;
 $red: #f05f5c;
 $blue: #5e98a3;
 $yellow: #fec351;
+
+$min-small-screen: em(620);
+$min-medium-screen: em(740);
